# connectors

./: go.mod  go.sum
estuary-cdk/estuary_cdk/: __init__.py
estuary-cdk/estuary_cdk/capture/: __init__.py  common.py
filesource/: filesource.go
flowsim/: Cargo.toml  flow.yaml
flowsim/src/: convert.rs  lib.rs  main.rs  spec.rs
materialize-bigquery/: Dockerfile  bigquery.go  bigquery_test.go  transactor.go
materialize-boilerplate/testing/: testing.go
materialize-duckdb/: Dockerfile  driver.go  driver_test.go  sqlgen.go  sqlgen_test.go  staged_file.go
materialize-duckdb/.snapshots/: TestSQLGeneration
materialize-mysql/: driver.go
materialize-postgres/: driver.go
materialize-redshift/: Dockerfile  driver.go  driver_test.go  transactor.go
materialize-snowflake/: snowflake.go  snowflake_test.go  staged_file.go
materialize-sql/: driver.go  endpoint.go  test_support.go
materialize-sqlite/: sqlite.go
source-sftp/: Dockerfile  main.go
tests/materialize/: run.sh
tests/materialize/materialize-duckdb/: cleanup.sh  fetch-data.go  fetch.sh  setup.sh  snapshot.json
tests/materialize/materialize-redshift/: snapshot.json
