[package]
name = "flowsim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flowsim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
connector-protocol = { git = "https://github.com/estuary/flow" }
sources = { git = "https://github.com/estuary/flow" }
build = { git = "https://github.com/estuary/flow" }
validation = { git = "https://github.com/estuary/flow" }
proto-flow = { git = "https://github.com/estuary/flow" }
tuple = { git = "https://github.com/estuary/flow" }
doc = { git = "https://github.com/estuary/flow" }
serde_json = { version = "1.0.93", features = ["raw_value"] }
url = "2.3.1"
bytes = "1.4.0"
tempdir = "0.3.7"
tokio = { version = "1.25.0", features = ["full"] }
hex = "0.4.3"
crossbeam = "0.8.2"
rand = "0.8.5"
